게임 시작 ,종료 화면 추가까지

--- a/index.html
+++ b/index.html
@@ -9,15 +9,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
     <img src="assets/bg1.png" id="bg1-img" class="asset-img"/>
     <img src="assets/bg2.png" id="bg2-img" class="asset-img"/>
     <img src="assets/bg3.png" id="bg3-img" class="asset-img"/>
     <img src="assets/Wall.png" id="wall-img" class="asset-img"/>
-    <img src="assets/bird.png" id="bird-img" class="asset-img"/>
+    <img src="assets/bird.png" id="player-img" class="asset-img"/>
     <img src="assets/coin.png" id="coin-img" class="asset-img"/>
-    <canvas></canvas>
+    <main>
+        <section class="ready-screen">
+            <img src="assets/title.png" class="title-img" />
+            <img src="assets/play.svg" class="play-img"/>
+        </section>
+
+        <section class="finish-screen">
+           <div class="distance">0m</div>
+           <div class="coin">0 coin</div>
+           <img src="assets/replay.svg" class="replay-img"/>
+        </section>
+
+        <canvas></canvas>
+    </main>
     <script type="module" src="./index.js"></script>
 </body>
 </html>
